Add guided intros to example notebooks

--- a/examples/01_real_data_workflow.ipynb
+++ b/examples/01_real_data_workflow.ipynb
@@ -2,6 +2,44 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "90268f35",
+   "metadata": {},
+   "source": [
+    "\n",
+    "    ## 导学单元\n",
+    "\n",
+    "    ### 课程目标\n",
+    "    - 认识真实流域的能量-水量平衡问题，并理解Budyko曲线在水文气候分区中的作用。\n",
+    "    - 熟悉Notebook与脚本 `examples/01_real_data_workflow.py` 的配合方式，便于在命令行与交互环境间切换。\n",
+    "\n",
+    "    ### 前置知识\n",
+    "    - 基础 Python（NumPy/Pandas）与 Matplotlib/Seaborn 绘图经验。\n",
+    "    - 对能量-水量平衡、蒸散发与降水等基本水文气候概念的认知。\n",
+    "\n",
+    "    ### 所需包和运行环境\n",
+    "    - Python 3.9+，建议在虚拟环境或 Conda 环境中运行 Jupyter Notebook。\n",
+    "    - 依赖包主要列于项目 `requirements.txt`，常用库包括 NumPy、Pandas、Matplotlib、Seaborn、Xarray、SciPy（按需）。\n",
+    "    - 如需加速或批量运行，可直接在命令行调用 `examples/01_real_data_workflow.py` 以生成对应输出。\n",
+    "\n",
+    "    ### 学习路径与章节骨架\n",
+    "    1. 背景/概念：认识真实流域的能量-水量平衡问题，并理解Budyko曲线在水文气候分区中的作用。\n",
+    "    2. 数据加载与预览：理解数据来源、字段含义与基本统计特征。\n",
+    "    3. 核心方法步骤（配合 `examples/01_real_data_workflow.py`）：调用脚本中的数据读取、预处理、Budyko指标计算与曲线拟合函数，串联完整分析流程。\n",
+    "    4. 结果可视化：通过散点、拟合曲线与残差可视化，检视模型适配度与异常点。\n",
+    "    5. 反思与扩展练习：思考不同气候区或时间分辨率下的曲线差异，尝试替换其他真实数据集。\n",
+    "\n",
+    "    ### 你将学到什么\n",
+    "    - 如何基于真实观测数据构建Budyko分析数据集并完成必要清洗。\n",
+    "- 利用脚本函数快速完成潜在蒸散发、干燥度指数等关键指标计算。\n",
+    "- 通过可视化诊断拟合效果并识别偏离Budyko假设的情景。\n",
+    "\n",
+    "    ### 本节完成标志\n",
+    "    - [ ] 成功运行脚本并生成Budyko散点与拟合曲线图。\n",
+    "- [ ] 理解每个中间数据表/变量的含义，能解释曲线偏离的可能原因。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4504cb00",
    "metadata": {},
    "source": [
