--- a/examples/complete_workflow_example.ipynb
+++ b/examples/complete_workflow_example.ipynb
@@ -2,6 +2,44 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "7d4fbe5a",
+   "metadata": {},
+   "source": [
+    "\n",
+    "    ## 导学单元\n",
+    "\n",
+    "    ### 课程目标\n",
+    "    - 快速回顾Budyko曲线的基本思想，理解完整工作流的输入输出。\n",
+    "    - 熟悉Notebook与脚本 `examples/complete_workflow_example.py` 的配合方式，便于在命令行与交互环境间切换。\n",
+    "\n",
+    "    ### 前置知识\n",
+    "    - 基础 Python（NumPy/Pandas）与 Matplotlib/Seaborn 绘图经验。\n",
+    "    - 对能量-水量平衡、蒸散发与降水等基本水文气候概念的认知。\n",
+    "\n",
+    "    ### 所需包和运行环境\n",
+    "    - Python 3.9+，建议在虚拟环境或 Conda 环境中运行 Jupyter Notebook。\n",
+    "    - 依赖包主要列于项目 `requirements.txt`，常用库包括 NumPy、Pandas、Matplotlib、Seaborn、Xarray、SciPy（按需）。\n",
+    "    - 如需加速或批量运行，可直接在命令行调用 `examples/complete_workflow_example.py` 以生成对应输出。\n",
+    "\n",
+    "    ### 学习路径与章节骨架\n",
+    "    1. 背景/概念：快速回顾Budyko曲线的基本思想，理解完整工作流的输入输出。\n",
+    "    2. 数据加载与预览：理解数据来源、字段含义与基本统计特征。\n",
+    "    3. 核心方法步骤（配合 `examples/complete_workflow_example.py`）：按照脚本顺序完成数据准备、参数估计、曲线拟合与误差评估，形成闭环。\n",
+    "    4. 结果可视化：输出关键图表（曲线拟合、误差分布、敏感性分析），支撑结论陈述。\n",
+    "    5. 反思与扩展练习：结合自身数据需求，思考如何定制参数化形式或替换拟合算法。\n",
+    "\n",
+    "    ### 你将学到什么\n",
+    "    - 从零搭建可复现的Budyko分析工作流的步骤与依赖。\n",
+    "- 在Notebook中调试、记录并验证脚本函数的调用方式。\n",
+    "- 如何根据误差和可视化反馈调整模型假设。\n",
+    "\n",
+    "    ### 本节完成标志\n",
+    "    - [ ] 顺利跑通脚本对应的全流程并保存生成的图表或中间结果。\n",
+    "- [ ] 对每个核心函数的输入输出有清晰认识，可复述其作用。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "366d4908",
    "metadata": {},
    "source": [
