--- a/examples/complex_integrated_analysis.ipynb
+++ b/examples/complex_integrated_analysis.ipynb
@@ -2,6 +2,44 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "018de288",
+   "metadata": {},
+   "source": [
+    "\n",
+    "    ## 导学单元\n",
+    "\n",
+    "    ### 课程目标\n",
+    "    - 回顾Budyko框架涉及的水热概念，理解综合分析如何将多源数据与模拟结合。\n",
+    "    - 熟悉Notebook与脚本 `examples/complex_integrated_analysis.py` 的配合方式，便于在命令行与交互环境间切换。\n",
+    "\n",
+    "    ### 前置知识\n",
+    "    - 基础 Python（NumPy/Pandas）与 Matplotlib/Seaborn 绘图经验。\n",
+    "    - 对能量-水量平衡、蒸散发与降水等基本水文气候概念的认知。\n",
+    "\n",
+    "    ### 所需包和运行环境\n",
+    "    - Python 3.9+，建议在虚拟环境或 Conda 环境中运行 Jupyter Notebook。\n",
+    "    - 依赖包主要列于项目 `requirements.txt`，常用库包括 NumPy、Pandas、Matplotlib、Seaborn、Xarray、SciPy（按需）。\n",
+    "    - 如需加速或批量运行，可直接在命令行调用 `examples/complex_integrated_analysis.py` 以生成对应输出。\n",
+    "\n",
+    "    ### 学习路径与章节骨架\n",
+    "    1. 背景/概念：回顾Budyko框架涉及的水热概念，理解综合分析如何将多源数据与模拟结合。\n",
+    "    2. 数据加载与预览：理解数据来源、字段含义与基本统计特征。\n",
+    "    3. 核心方法步骤（配合 `examples/complex_integrated_analysis.py`）：依托脚本中的模块化函数执行数据模拟、指标计算、分区对比等集成操作。\n",
+    "    4. 结果可视化：用分面图、相关性矩阵与对比曲线呈现多情景结果，检查模型一致性。\n",
+    "    5. 反思与扩展练习：尝试替换模拟参数或引入额外气候情景，评估方法稳健性。\n",
+    "\n",
+    "    ### 你将学到什么\n",
+    "    - 在单一Notebook中组织多步骤水文气候分析的最佳实践。\n",
+    "- 如何重用脚本函数构建可复现的集成实验。\n",
+    "- 利用多种可视化手段比较不同区域或情景的Budyko响应。\n",
+    "\n",
+    "    ### 本节完成标志\n",
+    "    - [ ] 完成从数据生成/加载到可视化的全链路运行并得到多图输出。\n",
+    "- [ ] 能描述每个情景或分区在Budyko空间中的差异及可能原因。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ccfb563a",
    "metadata": {},
    "source": [
