--- a/examples/example_budyko_ml_workflow.ipynb
+++ b/examples/example_budyko_ml_workflow.ipynb
@@ -2,6 +2,44 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "352fc3b7",
+   "metadata": {},
+   "source": [
+    "\n",
+    "    ## 导学单元\n",
+    "\n",
+    "    ### 课程目标\n",
+    "    - 理解Budyko约束如何嵌入到机器学习管线中以保持物理一致性。\n",
+    "    - 熟悉Notebook与脚本 `examples/example_budyko_ml_workflow.py` 的配合方式，便于在命令行与交互环境间切换。\n",
+    "\n",
+    "    ### 前置知识\n",
+    "    - 基础 Python（NumPy/Pandas）与 Matplotlib/Seaborn 绘图经验。\n",
+    "    - 对能量-水量平衡、蒸散发与降水等基本水文气候概念的认知。\n",
+    "\n",
+    "    ### 所需包和运行环境\n",
+    "    - Python 3.9+，建议在虚拟环境或 Conda 环境中运行 Jupyter Notebook。\n",
+    "    - 依赖包主要列于项目 `requirements.txt`，常用库包括 NumPy、Pandas、Matplotlib、Seaborn、Xarray、SciPy（按需）。\n",
+    "    - 如需加速或批量运行，可直接在命令行调用 `examples/example_budyko_ml_workflow.py` 以生成对应输出。\n",
+    "\n",
+    "    ### 学习路径与章节骨架\n",
+    "    1. 背景/概念：理解Budyko约束如何嵌入到机器学习管线中以保持物理一致性。\n",
+    "    2. 数据加载与预览：理解数据来源、字段含义与基本统计特征。\n",
+    "    3. 核心方法步骤（配合 `examples/example_budyko_ml_workflow.py`）：结合脚本展示的数据分割、特征工程与约束损失设计，完成模型训练与评估。\n",
+    "    4. 结果可视化：通过学习曲线、误差对比和Budyko散点图检视模型是否遵守物理规律。\n",
+    "    5. 反思与扩展练习：尝试替换模型或损失函数，观察约束对泛化与物理一致性的影响。\n",
+    "\n",
+    "    ### 你将学到什么\n",
+    "    - 在ML任务中实现Budyko约束或先验的常见方式。\n",
+    "- 如何平衡模型拟合精度与物理合理性。\n",
+    "- 利用Notebook记录实验超参数与评估指标，保证可重复性。\n",
+    "\n",
+    "    ### 本节完成标志\n",
+    "    - [ ] 完成受Budyko约束的模型训练并生成评估与可视化输出。\n",
+    "- [ ] 能解释约束项对预测结果和物理一致性的影响。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1db50eee",
    "metadata": {},
    "source": [
