--- a/examples/flagship_applicability_analysis.ipynb
+++ b/examples/flagship_applicability_analysis.ipynb
@@ -2,6 +2,44 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "7f6829e7",
+   "metadata": {},
+   "source": [
+    "\n",
+    "    ## 导学单元\n",
+    "\n",
+    "    ### 课程目标\n",
+    "    - 明确Budyko框架的适用范围与局限，识别不同气候区的特征。\n",
+    "    - 熟悉Notebook与脚本 `examples/flagship_applicability_analysis.py` 的配合方式，便于在命令行与交互环境间切换。\n",
+    "\n",
+    "    ### 前置知识\n",
+    "    - 基础 Python（NumPy/Pandas）与 Matplotlib/Seaborn 绘图经验。\n",
+    "    - 对能量-水量平衡、蒸散发与降水等基本水文气候概念的认知。\n",
+    "\n",
+    "    ### 所需包和运行环境\n",
+    "    - Python 3.9+，建议在虚拟环境或 Conda 环境中运行 Jupyter Notebook。\n",
+    "    - 依赖包主要列于项目 `requirements.txt`，常用库包括 NumPy、Pandas、Matplotlib、Seaborn、Xarray、SciPy（按需）。\n",
+    "    - 如需加速或批量运行，可直接在命令行调用 `examples/flagship_applicability_analysis.py` 以生成对应输出。\n",
+    "\n",
+    "    ### 学习路径与章节骨架\n",
+    "    1. 背景/概念：明确Budyko框架的适用范围与局限，识别不同气候区的特征。\n",
+    "    2. 数据加载与预览：理解数据来源、字段含义与基本统计特征。\n",
+    "    3. 核心方法步骤（配合 `examples/flagship_applicability_analysis.py`）：依照脚本完成数据分组、指标计算与适用性判定，形成定量证据。\n",
+    "    4. 结果可视化：利用分布图、区域对比图和阈值标记展示适用性诊断结果。\n",
+    "    5. 反思与扩展练习：针对边界情形提出改进或补充指标，思考如何拓展到新区域。\n",
+    "\n",
+    "    ### 你将学到什么\n",
+    "    - 评估Budyko框架在不同区域的适用性流程。\n",
+    "- 如何设置判定阈值并解释不满足假设的区域。\n",
+    "- 将诊断结果转化为可视化报告的方法。\n",
+    "\n",
+    "    ### 本节完成标志\n",
+    "    - [ ] 得到按区域或情景划分的适用性判定图表，并能解读结果。\n",
+    "- [ ] 整理出下一步需要补集数据或调整参数的清单。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dc3e1b1e",
    "metadata": {},
    "source": [
